--- a/APP/GamificationApp/ios/Podfile
+++ b/APP/GamificationApp/ios/Podfile
@@ -12,6 +12,8 @@ target 'GamificationApp' do
     :hermes_enabled => false
   )
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'GamificationAppTests' do
     inherit! :complete
     # Pods for testing
