--- a/APP/GamificationApp/package.json
+++ b/APP/GamificationApp/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "clean": "rmdir /s node_modules && yarn cache clean --force && yarn install"
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.6",
@@ -33,6 +34,7 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.14.0",
     "eslint-import-resolver-babel-module": "^5.3.1",
+    "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.4",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
