--- a/APP/GamificationApp/tsconfig.json
+++ b/APP/GamificationApp/tsconfig.json
@@ -37,7 +37,7 @@
     "moduleResolution": "node", /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
     "baseUrl": ".",
     "paths": {
-      "*": ["src/*"],
+      //"*": ["./*"],
       "@assets/*": [
         "src/assets/*"
       ],
@@ -45,10 +45,10 @@
         "src/components/*"
       ],
       "@constants/*": [
-        "src/navigation/*"
+        "src/constants/*"
       ],
       "@navigation/*": [
-        "src/components/*"
+        "src/navigation/*"
       ],
       "@screens/*": [
         "src/screens/*"
