--- a/APP/GamificationApp/package.json
+++ b/APP/GamificationApp/package.json
@@ -11,6 +11,7 @@
     "clean": "rmdir /s node_modules && yarn cache clean --force && yarn install"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.15",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.25.0",
