--- a/APP/GamificationApp/ios/GamificationApp/Info.plist
+++ b/APP/GamificationApp/ios/GamificationApp/Info.plist
@@ -69,6 +69,8 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>Monoton-Regular.ttf</string>
+		<string>Monoton.ttf</string>
 	</array>
 </dict>
 </plist>
